# scPCA

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  README.rst  api.html  format.sh  genindex.html  index.html  models.html  objects.inv  plots.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  tools.html
.github/workflows/: branch.yaml  release.yaml
_autosummary/: scpca.html  scpca.logger.html  scpca.models.dpca.html  scpca.models.html  scpca.models.scpca.html  scpca.pca.html  scpca.plots.html  scpca.train.handler.html  scpca.train.html  scpca.train.local_handler.html  scpca.train.settings.html  scpca.train.wrapper.html  scpca.utils.data.html  scpca.utils.design.html  scpca.utils.html
_sources/: api.rst  index.rst  models.rst  plots.rst  tools.rst
_sources/_autosummary/: scpca.logger.rst  scpca.models.dpca.rst  scpca.models.rst  scpca.models.scpca.rst  scpca.pca.rst  scpca.plots.rst  scpca.rst  scpca.train.handler.rst  scpca.train.local_handler.rst  scpca.train.rst  scpca.train.settings.rst  scpca.train.wrapper.rst  scpca.utils.data.rst  scpca.utils.design.rst  scpca.utils.rst
_sources/notebooks/: angelidis.ipynb  kang.ipynb
_static/: documentation_options.js
docs/: api.rst  conf.py  index.rst  plots.rst  refs.bib
docs/notebooks/: kang.ipynb  pancreas.ipynb
notebooks/: angelidis.html  angelidis.ipynb  hrvatin.html  hrvatin.ipynb  kang.html  kang.ipynb  pancreas.html  pancreas.ipynb
scpca/: __init__.py  generators.py  model.py  pca.py  time_serie.py
scpca/models/: __init__.py  dpca.py  scpca.py
scpca/plots/: __init__.py  data.py  factor_embedding.py  helper.py  loadings_heatmap.py  loadings_scatter.py  loadings_state.py  qc.py
scpca/train/: __init__.py  handler.py  local_handler.py  settings.py  wrapper.py
scpca/utils/: __init__.py  data.py  design.py
tests/: conftest.py  test_data.py  test_pca.py  test_time_series.py
tests/test_files/: test_object.h5ad
