[tool.poetry]
name = "scpca"
version = "0.1.0"
description = "Single-cell PCA."
authors = ["Harald Vohringer <harald.voeh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
scanpy = ">=1.8.2"
pyro-ppl = "<1.8.4"
torch = "<2.0.0"
adjusttext = "^0.7.3"
gseapy = "^1.0.4"
Sphinx = { version = "7.0.1", optional = true }
sphinx-rtd-theme = { version = "1.3.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
nbsphinx = { version = "0.8.9", optional = true }
sphinx-autodoc-typehints = {version="1.24.0", optional =true}
jupyter = {version = "*", optional = true}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.1"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
bandit = "^1.7.5"
pre-commit = "^3.4.0"
mypy = "^1.5.1"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "nbsphinx", "sphinx-autodoc-typehints"]
notebook = ["jupyter"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
force-exclude = """
scCCA/model.py
"""
